kubernetes/apps/base/media/media-robbinsdale/prowlarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  annotations:
    item.homer.rajsingh.info/name: Prowlarr
    item.homer.rajsingh.info/subtitle: Indexer Manager
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/prowlarr.svg
    item.homer.rajsingh.info/keywords: tv, series, automation
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
  - prowlarr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: prowlarr
      port: 9696
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
